--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,24 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Your Campaign Wiki</h1>
-    <p>Your own campaign's wiki. Organize your D&D (or other TTRPG) campaign information here! Store characters, places of interest, etc. here for you and your players to see and curate.</p>
+<div class="container">
+    <div class="row align-items-center min-vh-100">
+        <div class="col-6 d-flex justify-content-center">
+            <div class="text-center">
+                <h1>Campaign Wiki</h1>
+                <p>Create your own campaign's wiki. Organize your D&D (or other TTRPG) campaign information here! Store characters, places of interest, etc. here for you and your players to see and curate.</p>
+            </div>
+        </div>
+        <div class="col-6 d-flex justify-content-center">
+            <div class="text-start">
+                <label class="p-1" for="username">Username</label>
+                <input name="username" id="username"/>
+                <br />
+                <label class="p-1" for="password">Password</label>
+                <input name="password" id="password" />
+
+                <!-- add "OR input campaign code"-->
+            </div>
+        </div>
+    </div>
 </div>
