small formatting for form

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,12 +12,16 @@
         </div>
         <div class="col-6 d-flex justify-content-center">
             <div class="text-start">
-                <label class="p-1" for="username">Username</label>
-                <input name="username" id="username"/>
-                <br />
-                <label class="p-1" for="password">Password</label>
-                <input name="password" id="password" />
-
+                <form>
+                    <div>
+                        <label class="p-1" for="username">Username</label><br />
+                        <input name="username" id="username"/>
+                    </div>
+                    <div>
+                        <label class="p-1" for="password">Password</label><br />
+                        <input name="password" id="password" />
+                    </div>
+                </form>
                 <!-- add "OR input campaign code"-->
             </div>
         </div>
